# D3D12Helper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_APPLY.txt  apply_overlay.cmd  build_debug_release_and_test.cmd
cmake/: D3D12HelperConfig.cmake.in  D3D12HelperDxcRuntime.cmake
doc/: Architecture.md  D3D12Binding.md  D3D12Core.md  D3D12CpuImage.md  D3D12Diagnostics.md  D3D12Foundation.md  D3D12Framework.md  D3D12Gpu.md  D3D12Interop.md  D3D12Presentation.md  D3D12Processing.md  D3D12ProcessingFutureWork.md  D3D12ProcessingWorkflow.md  D3D12ShaderReflection.md  D3D12State.md  D3D12TextureTransfer.md  D3D12View.md  GenericGpuFoundationFinalAudit.md  GenericGpuFoundationPhase1.md  GenericGpuFoundationPhase2.md  GenericGpuFoundationPhase2Audit.md  GenericGpuFoundationPhase2BlurMask.md  GenericGpuFoundationPhase2EffectsExpansion.md  GenericGpuFoundationPhase2ProcessingExpansion.md  GenericGpuFoundationPhase2ThresholdPyramid.md  GenericGpuFoundationPhase3TypedCommandList.md  GenericGpuFoundationPhase4YuvHlslPrimitives.md  Packaging.md  Patterns.md  README.md  ReleaseChecklist_v0.2.0.md  ReleaseChecklist_v1.1.0.md  ReleaseChecklist_v1.13.0.md  ReleaseChecklist_v1.2.0.md  ReleaseNotes_v1.0.0.md  ReleaseNotes_v1.1.0.md  ReleaseNotes_v1.10.0.md  ReleaseNotes_v1.10.1.md  ReleaseNotes_v1.11.0.md  ReleaseNotes_v1.12.0.md  (+18 more)
include/D3D12Core/: D3D12Barrier.hpp  D3D12CommandContext.hpp  D3D12Core.hpp  D3D12Debug.hpp  D3D12DeviceContext.cpp  D3D12FormatUtil.cpp  D3D12SharedResource.hpp  DxgiAdapterSelector.cpp  DxgiAdapterSelector.hpp  DxgiUtil.cpp
include/D3D12Framework/: D3D12DescriptorAllocator.hpp  D3D12DescriptorHandle.hpp  D3D12GraphicsPipeline.hpp  D3D12ReadbackBuffer.hpp  D3D12Resource.hpp  D3D12ShaderCompiler.hpp  D3D12SwapChainHelper.hpp  D3D12UploadRing.cpp  D3D12UploadRing.hpp
include/D3D12Helper/D3D12Core/: D3D12Barrier.hpp  D3D12BarrierBatch.hpp  D3D12CommandAllocatorContext.hpp  D3D12CommandContext.hpp  D3D12Common.hpp  D3D12Core.hpp  D3D12CoreConfig.hpp  D3D12Debug.hpp  D3D12DeviceContext.hpp  D3D12Fence.hpp  D3D12FormatUtil.hpp  D3D12Queue.hpp  D3D12QueueSyncPoint.hpp  D3D12SharedResource.hpp  D3D12Subresource.hpp  DxgiAdapterSelector.hpp  DxgiUtil.hpp  ThrowIfFailed.hpp
include/D3D12Helper/D3D12Diagnostics/: D3D12Debug.hpp  D3D12DeviceDiagnostics.hpp  D3D12Diagnostics.hpp  D3D12GpuTimer.hpp  D3D12InfoQueue.hpp
include/D3D12Helper/D3D12Foundation/: D3D12Common.hpp  D3D12FormatUtil.hpp  D3D12Foundation.hpp  DxgiUtil.hpp  ThrowIfFailed.hpp
include/D3D12Helper/D3D12Framework/: D3D12ComputePipeline.hpp  D3D12DescriptorAllocator.hpp  D3D12DescriptorHandle.hpp  D3D12DescriptorHeap.hpp  D3D12Framework.hpp  D3D12GraphicsPipeline.hpp  D3D12Helpers.hpp  D3D12ReadbackBuffer.hpp  D3D12Resource.hpp  D3D12ShaderCompiler.hpp  D3D12SwapChainHelper.hpp  D3D12UploadBuffer.hpp  D3D12UploadRing.hpp
include/D3D12Helper/D3D12Gpu/: D3D12Binding.hpp  D3D12Copy.hpp  (+11 more)
sample/: CMakeLists.txt  README.md
sample/01_HelloDevice/: main.cpp
sample/02_ComputeGrayscale/: Grayscale.hlsl  main.cpp
sample/03_HelloTriangle/: main.cpp
sample/04_ParallelCompute/: main.cpp
sample/05_BufferCompute/: main.cpp
sample/06_UploadRingStreaming/: main.cpp
sample/07_ProcessingFusedConvertResize/: main.cpp
sample/08_ProcessingP010Rgba16/: main.cpp
sample/09_ProcessingBlur/: main.cpp
sample/10_ProcessingRegionEffect/: main.cpp
sample/11_ProcessingRegionBlur/: main.cpp
sample/12_ProcessingColorAdjust/: main.cpp
sample/13_ProcessingKernelFilter/: main.cpp
sample/14_ProcessingMask/: main.cpp
sample/15_ProcessingThreshold/: main.cpp
sample/16_ProcessingPyramid/: main.cpp
sample/17_ProcessingPyramidBlur/: main.cpp
sample/18_ProcessingCustomFusedShader/: CustomNv12ResizeDarken.hlsl  main.cpp
sample/19_TypedCommandList/: main.cpp
shaders/D3D12Processing/: ColorSpace.hlsli  ConvertNv12ToRgb.hlsl  ConvertRgbToNv12.hlsl  FusedRgbToRgbResize.hlsl  FusedYuv420ToRgbResize.hlsl  ProcessingCommon.hlsli
src/: D3D12AdvancedProcessing.cpp  D3D12Barrier.cpp  D3D12BarrierBatch.cpp  D3D12Binding.cpp  D3D12Blur.cpp  D3D12ColorAdjust.cpp  D3D12CommandAllocatorContext.cpp  D3D12CommandContext.cpp  D3D12Composite.cpp  D3D12ComputePipeline.cpp  D3D12Copy.cpp  D3D12Core.cpp  D3D12CpuImage.cpp  D3D12Debug.cpp  D3D12DescriptorAllocator.cpp  D3D12DescriptorHeap.cpp  D3D12DeviceContext.cpp  D3D12DeviceDiagnostics.cpp  D3D12Fence.cpp  D3D12FormatConverter.cpp  D3D12FormatUtil.cpp  D3D12FusedPipeline.cpp  D3D12GpuTimer.cpp  D3D12GraphicsPipeline.cpp  D3D12Helpers.cpp  D3D12InfoQueue.cpp  D3D12Interop.cpp  D3D12KernelFilter.cpp  D3D12MaskProcessor.cpp  D3D12Mipmap.cpp  D3D12ProcessingContext.cpp  D3D12ProcessingResourceViewAdapters.cpp  D3D12ProcessingResourceViewAdvanced.cpp  D3D12ProcessingResourceViewPyramidWorkspaces.cpp  D3D12ProcessingResourceViewThresholdPyramid.cpp  D3D12ProcessingShaderCache.cpp  D3D12ProcessingTypes.cpp  D3D12PyramidBlur.cpp  D3D12PyramidProcessor.cpp  D3D12PyramidRegionBlur.cpp  (+28 more)
test/: CMakeLists.txt  D3D11InteropE2E.cpp  PackageSmokeTest.cmake  README.md  TestCommon.hpp  TestFramework.hpp  test_AdvancedProcessing.cpp  test_Barrier.cpp  test_Binding.cpp  test_CommandContext.cpp  test_CompatibilityV1121.cpp  test_CompatibilityV1121Advanced.cpp  test_CompatibilityV1121BlurMask.cpp  test_CompatibilityV1121ProcessingEffects.cpp  test_CompatibilityV1121ProcessingExpansion.cpp  test_CompatibilityV1121ThresholdPyramid.cpp  test_CompatibilityV1121TypedCommand.cpp  test_ComputePipeline.cpp  test_CopyResolveMipmap.cpp  test_Core.cpp  test_CoverageHardening.cpp  test_DescriptorAllocator.cpp  test_Diagnostics.cpp  test_DxgiUtil.cpp  test_Fence.cpp  test_FormatUtil.cpp  test_GraphicsPipeline.cpp  test_Hardening.cpp  test_Helpers.cpp  test_Interop.cpp  test_ModuleHeaders.cpp  test_Presentation.cpp  test_Processing.cpp  test_ProcessingBlur.cpp  test_ProcessingColorAdjust.cpp  test_ProcessingFusedPipeline.cpp  test_ProcessingFusedYuvP010.cpp  test_ProcessingKernelFilter.cpp  test_ProcessingMask.cpp  test_ProcessingPyramid.cpp  (+28 more)
test/package_smoke/: CMakeLists.txt  main.cpp
(+27 files in other folders)
